# move_basic

./: CMakeLists.txt  package.xml
cfg/: MoveSmooth.cfg
include/move_basic/: collision_checker.h  obstacle_points.h
include/move_smooth/: collision_checker.h  queued_action_server.h
launch/: move_smooth.launch
src/: collision_checker.cpp  move_smooth.cpp  obstacle_points.cpp
